Closed Bug 637437 Opened 14 years ago Closed 14 years ago

Fix --enable-debug --disable-methodjit

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: paul.biggar, Assigned: paul.biggar)

References

Details

(Whiteboard: [fixed-in-tracemonkey])

Attachments

(1 file)

Attached patch Fix buildSplinter Review
Patch attached: CurrentThreadId isn't defined above without JS_METHODJIT.

Barely needs review since its NPOTB, but I'm unclear on tree rules. Can I push this on review, or should I wait til we branch, or should I ask for approval?
Attachment #515719 - Flags: review?(jorendorff)
Comment on attachment 515719 [details] [diff] [review]
Fix build

r=me. Ask on IRC about tree rules.
Attachment #515719 - Flags: review?(jorendorff) → review+
https://hg.mozilla.org/tracemonkey/rev/f57835ad7a4a
Whiteboard: [fixed-in-tracemonkey]
http://hg.mozilla.org/mozilla-central/rev/f57835ad7a4a
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: