Bug 637437 - Fix --enable-debug --disable-methodjit build (r=jorendorff)